# secu_ai_agent

./: .gitignore  GOAL.md  README.md  RELEASE_NOTES.md
agent/: CMakeLists.txt  README.md
agent/config/: config.json  reactor.json
agent/config/rules/: kisa-apache.json  kisa-docker.json  kisa-k8s.json  kisa-linux.json  kisa-nginx.json  kisa-tomcat.json
agent/src/: main.cpp
agent/src/core/: interpreter.cpp  interpreter.h  react.cpp  react.h  spec.h
agent/src/llm/: llm_engine.h  local_llama.cpp
agent/src/op/: context.h  op.h  registry.cpp  registry.h  runner.cpp  runner.h  util_regex.h
agent/src/op/assert/: absent.cpp  contains.cpp  equals.cpp  ge.cpp  le.cpp  matches.cpp  not_contains.cpp
agent/src/op/config/: pam.cpp  read_value.cpp  sshd.cpp  web_directives.cpp  xml_query.cpp
agent/src/op/ctx/: review.cpp
agent/src/op/docker/: api_get.cpp
agent/src/op/fs/: file_info.cpp  find_files.cpp  list_dir.cpp  read_file.cpp  search_in_file.cpp
agent/src/op/http/: probe.cpp
agent/src/op/net/: list_ports.cpp
agent/src/op/pkg/: query.cpp  update_history.cpp
agent/src/op/proc/: list.cpp
agent/src/op/svc/: service_state.cpp
agent/src/op/sys/: accounts.cpp  detect_was_web.cpp  env_umask.cpp  host_info.cpp
agent/src/platform/: fsmeta.h  fsmeta_posix.cpp  fsmeta_win.cpp  net.h  net_linux.cpp  net_mac.cpp  net_win.cpp  netclient.h  netclient_posix.cpp  netclient_win.cpp  proc.h  proc_linux.cpp  proc_mac.cpp  proc_win.cpp
agent/src/util/: log.h
agent/testdata/apache-clean/conf/: httpd.conf
agent/testdata/apache-vuln/conf/: httpd.conf
agent/testdata/tomcat-clean/conf/: tomcat-users.xml
agent/testdata/tomcat-vuln/conf/: server.xml  tomcat-users.xml
plan/: final_plan.md
